Add info about compatibility